--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -25,22 +25,25 @@
     "@vercel/speed-insights": "^1.1.0",
     "auth": "^1.1.1",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
     "head": "^1.0.0",
     "navigation": "^6.2.0",
-    "next": "^14.2.4",
+    "next": "^15.2.2",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
+    "styled-components": "^6.1.15",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/next": "^8.0.7",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
