--- a/package.json
+++ b/package.json
@@ -16,31 +16,19 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
     "@types/dompurify": "^3.0.5",
     "@vercel/analytics": "^1.4.0",
-    "@vercel/speed-insights": "^1.1.0",
     "bcrypt": "^5.1.1",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
-    "navigation": "^6.2.0",
     "next": "^15.3.1",
-    "next-auth": "^4.24.7",
-    "next-pwa": "^5.6.0",
     "octokit": "^5.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
-    "server-only": "^0.0.1",
-    "sharp": "^0.33.5",
-    "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
@@ -60,7 +48,6 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.10",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "ct3aMetadata": {
