--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.19.1",
     "@types/dompurify": "^3.0.5",
     "@vercel/analytics": "^1.4.0",
@@ -23,10 +24,12 @@
     "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
     "next": "^15.3.1",
+    "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-swipeable": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "sharp": "^0.33.5"
   },
