feat: Improve performance and accessibility
  This commit introduces several improvements to the website's performance and accessibility.

  Performance:
   - Optimized image loading by adding the priority prop to critical images, reducing Cumulative Layout Shift (CLS).
   - Improved font loading by co-locating font files with the app and using next/font/local, reducing network latency
     and CLS.
   - Added a browserslist configuration to package.json to avoid serving unnecessary legacy JavaScript to modern
     browsers.

  Accessibility:
   - Added an aria-label to the theme switcher button to provide an accessible name for screen readers.
   - Added the lang="en" attribute to the <html> element to define the page's language.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nannipernazza.com",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -49,5 +49,11 @@
   "ct3aMetadata": {
     "initVersion": "7.37.0"
   },
-  "packageManager": "npm@10.7.0"
+  "packageManager": "npm@10.7.0",
+  "browserslist": [
+    "last 2 chrome versions",
+    "last 2 firefox versions",
+    "last 2 safari versions",
+    "last 2 edge versions"
+  ]
 }
