--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nannipernazza.com",
-  "version": "1.1.0",
+  "name": "nannipy.com",
+  "version": "1.5.0",
   "private": true,
   "type": "module",
   "scripts": {
